# RoboTwin

./: .gitmodules  AGENTS.md  know-how.md  main.py  pyproject.toml
docs/: run_robo_twin_laptop.md  vla_policy_beginner_guide.md
experiments/data_selection/click_bell_demo_clean/: best_selection.txt  selection_greedy_maxdist_seed42.json  selection_greedy_maxdist_seed43.json  selection_greedy_maxdist_seed44.json  selection_greedy_maxdist_seed45.json  selection_greedy_maxdist_seed46.json  selection_summary.csv
experiments/data_selection/click_bell_demo_randomized/: best_selection.txt  selection_greedy_maxdist_seed42.json  selection_greedy_maxdist_seed43.json  selection_greedy_maxdist_seed44.json  selection_greedy_maxdist_seed45.json  (+2 more)
policy/ACT/: SIM_TASK_CONFIGS.json  process_data.py  process_data.sh
policy/DP/: process_data.py  process_data.sh
policy/DP3/: process_data.sh
policy/pi0/: process_data_pi0.sh
report/: 2026-03-07_0_init_vla_train_deploy.md  2026-03-08_0_data_selection_baseline_integration.md  2026-03-12_0_pi0_pi05_data_selection_frame_metrics.md  2026-03-13_0_pi0_process_data_all_subsets_switch.md  2026-03-16_0_pi0_feature_std_var_subset_gradient.md
report/coop/: 2026-03-07_0_init_vla_train_deploy.md  2026-03-08_0_data_selection_baseline_integration.md  2026-03-12_0_pi0_pi05_data_selection_frame_metrics.md  2026-03-13_0_pi0_process_data_all_subsets_switch.md  2026-03-16_0_pi0_feature_std_var_subset_gradient.md
script/: run_act_selection_experiments.py  select_training_data.py
script/data_selection/: __init__.py  feature_selector.py
(+34 files in other folders)
