[project]
name = "robotwin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=16.1.0",
    "azure==4.0.0",
    "azure-ai-inference>=1.0.0b9",
    "dm-control>=1.0.37",
    "einops>=0.8.2",
    "ffmpeg>=1.4",
    "gymnasium==0.29.1",
    "h5py>=3.16.0",
    "huggingface-hub==0.25.0",
    "imageio==2.34.2",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "mplib==0.2.1",
    "open3d==0.18.0",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pyglet<2",
    "sapien==3.0.0b1",
    "scipy==1.10.1",
    "setuptools<81",
    "termcolor>=3.3.0",
    "torch==2.4.1",
    "torchvision>=0.19.1",
    "transforms3d==0.4.2",
    "trimesh==4.4.3",
    "wandb>=0.25.0",
    "zarr>=2.18.3",
]
